--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "commonjs": "dist/cascade-q.cjs",
   "scripts": {
     "build": "vite build",
-    "lint": "eslint \"src/**/*.js\"",
+    "test": "npm run build && vitest run",
+    "lint": "eslint \"src/**/*.{ts, js}\"",
     "format": "prettier --write ."
   },
   "repository": {
