--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "cascade-q",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A flexible async task scheduler with multi-level priorities, concurrency control, and priority decay for Javascript and Typescript.",
   "type": "module",
   "main": "dist/cascade-q.js",
   "commonjs": "dist/cascade-q.cjs",
+  "module": "./dist/cascade-q.js",
+  "types": "./dist/cascade-q.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/cascade-q.js",
+      "require": "./dist/cascade-q.cjs",
+      "types": "./dist/cascade-q.d.ts"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts"
+    }
+  },
   "scripts": {
     "build": "vite build",
     "test": "npm run build && vitest run",
